Updated list formatting according to help

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,7 +32,9 @@ jobs:
           push: false
           tags: carstencodes/pdm-alpine:1.7.2-python3.8
           build-args: |
-            PYTHON_VERSION=3.8, ALPINE_VERSION=3.13, PDM_VERSION=1.7.2
+            PYTHON_VERSION:3.8
+            ALPINE_VERSION:3.13
+            PDM_VERSION:1.7.2
       -
         name: Build and push 3.9 / 3.14
         uses: docker/build-push-action@v2
@@ -41,4 +43,6 @@ jobs:
           push: false
           tags: carstencodes/pdm-alpine:1.7.2-python3.9
           build-args: |
-            PYTHON_VERSION=3.9, ALPINE_VERSION=3.14, PDM_VERSION=1.7.2
+            PYTHON_VERSION:3.9
+            ALPINE_VERSION:3.14
+            PDM_VERSION:1.7.2
