--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false
+          push: true
           tags: carstencodes/pdm-alpine:1.7.2-python3.8
           build-args: |
             PYTHON_VERSION=3.8
@@ -40,7 +40,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: false
+          push: true
           tags: carstencodes/pdm-alpine:1.7.2-python3.9
           build-args: |
             PYTHON_VERSION=3.9
