--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - 'main'
 
-env:
-  USE_PDM_VERSION: 1.8.2
-
 jobs:
   docker:
     strategy:
@@ -15,8 +12,10 @@ jobs:
         include:
           - python: 3.8
             alpine: 3.13
+            pdm: 1.8.2
           - python: 3.9
             alpine: 3.14
+            pdm: 1.8.2
     runs-on: ubuntu-latest
     steps:
       -
@@ -40,8 +39,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: carstencodes/pdm-alpine:$USE_PDM_VERSION-python${{ matrix.python }}
+          tags: carstencodes/pdm-alpine:${{ matrix.pdm }}-python${{ matrix.python }}
           build-args: |
             PYTHON_VERSION=${{ matrix.python }}
             ALPINE_VERSION=${{ matrix.alpine }}
-            PDM_VERSION=$USE_PDM_VERSION
+            PDM_VERSION=${{ matrix.pdm }}
