--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,18 +4,20 @@ on:
   push:
     branches:
       - 'main'
+      - 'ci/test'
 
 jobs:
   docker:
+    env:
+      USED_PDM_VERSION: 1.12.1
+      USED_GITLAB_CLI: 2.10.1
     strategy:
       matrix:
         include:
           - python: 3.8
             alpine: 3.13
-            pdm: 1.12.1
           - python: 3.9
             alpine: 3.14
-            pdm: 1.12.1
     runs-on: ubuntu-latest
     steps:
       -
@@ -34,13 +36,27 @@ jobs:
           username: ${{ secrets.DOCKER_USER_NAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       -
-        name: Build and push python ${{ matrix.python }} / alpine ${{ matrix.alpine }}
+        name: Build and push base image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }}
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: true
+          target: base
+          push: ${{github.ref_name}} == 'main'
           tags: carstencodes/pdm-alpine:${{ matrix.pdm }}-python${{ matrix.python }}
           build-args: |
             PYTHON_VERSION=${{ matrix.python }}
             ALPINE_VERSION=${{ matrix.alpine }}
-            PDM_VERSION=${{ matrix.pdm }}
+            PDM_VERSION=$USED_PDM_VERSION
+      -
+        name: Build and push gitlab image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }}
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          target: gitlab
+          push: ${{github.ref_name}} == 'main'
+          tags: carstencodes/pdm-alpine:${{ matrix.pdm }}-python${{ matrix.python }}-gitlab$USED_GITLAB_CLI
+          build-args: |
+            PYTHON_VERSION=${{ matrix.python }}
+            ALPINE_VERSION=${{ matrix.alpine }}
+            PDM_VERSION=$USED_PDM_VERSION
+
