--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -56,7 +56,7 @@ jobs:
           build-args: |
             PYTHON_VERSION=${{ matrix.python }}
             ALPINE_VERSION=${{ matrix.alpine }}
-            PDM_VERSION=$USED_PDM_VERSION
+            PDM_VERSION=${{env.USED_PDM_VERSION}}
       -
         name: Build and push base image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }}
         uses: docker/build-push-action@v2
@@ -69,18 +69,18 @@ jobs:
           build-args: |
             PYTHON_VERSION=${{ matrix.python }}
             ALPINE_VERSION=${{ matrix.alpine }}
-            PDM_VERSION=$USED_PDM_VERSION
-#      -
-#        name: Build and push gitlab image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }}
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          target: gitlab
-#          push: ${{steps.runs_on_main.outputs.is_main_branch}}
-#          tags: carstencodes/pdm-alpine:${{ matrix.pdm }}-python${{ matrix.python }}-gitlab$USED_GITLAB_CLI
-#          build-args: |
-#            PYTHON_VERSION=${{ matrix.python }}
-#            ALPINE_VERSION=${{ matrix.alpine }}
-#            PDM_VERSION=$USED_PDM_VERSION
-#            GITLAB_CLI_VERSION=$USED_GITLAB_CLI_VERSION
-
+            PDM_VERSION=${{env.USED_PDM_VERSION}}
+      -
+        name: Build and push gitlab image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }} / gitlab ${{env.USED_GITLAB_CLI}}
+        uses: docker/build-push-action@v2
+        if: ${{steps.runs_on_main.outputs.is_main_branch}} == true        
+        with:
+          context: .
+          target: gitlab
+          push: true
+          tags: carstencodes/pdm-alpine:${{ matrix.pdm }}-python${{ matrix.python }}-gitlab${{env.USED_GITLAB_CLI}}
+          build-args: |
+            PYTHON_VERSION=${{ matrix.python }}
+            ALPINE_VERSION=${{ matrix.alpine }}
+            PDM_VERSION=${{env.USED_PDM_VERSION}}
+            GITLAB_CLI_VERSION=${{env.USED_GITLAB_CLI_VERSION}}
