--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,17 +46,17 @@ jobs:
           username: ${{ secrets.DOCKER_USER_NAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
       -
-        name: Build base image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }} without pushing
+        name: Build all images with python ${{ matrix.python }} / alpine ${{ matrix.alpine }} without pushing
         uses: docker/build-push-action@v2
-        if: ! ${{steps.runs_on_main.outputs.is_main_branch}}
+        if: ${{steps.runs_on_main.outputs.is_main_branch == 'false'}}
         with:
           context: .
-          target: base
           push: false
           build-args: |
             PYTHON_VERSION=${{ matrix.python }}
             ALPINE_VERSION=${{ matrix.alpine }}
             PDM_VERSION=${{env.USED_PDM_VERSION}}
+            GITLAB_CLI_VERSION=${{env.USED_GITLAB_CLI_VERSION}}
       -
         name: Build and push base image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }}
         uses: docker/build-push-action@v2
