--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -23,13 +23,6 @@ jobs:
             alpine: 3.14
     runs-on: ubuntu-latest
     steps:
-      - 
-        name: Check if on main branch
-        shell: bash
-        run: | 
-          [ "${GITHUB_REF#refs/heads/}" == "main" ] && echo "##[set-output name=is_main_branch;]$(echo true)" 
-          [ "${GITHUB_REF#refs/heads/}" != "main" ] && echo "##[set-output name=is_main_branch;]$(echo false)"
-        id: runs_on_main
       -
         name: Checkout
         uses: actions/checkout@v2
@@ -48,7 +41,7 @@ jobs:
       -
         name: Build all images with python ${{ matrix.python }} / alpine ${{ matrix.alpine }} without pushing
         uses: docker/build-push-action@v2
-        if: ${{steps.runs_on_main.outputs.is_main_branch == 'false'}}
+        if: ${{ github.ref_name == 'main' }}
         with:
           context: .
           push: false
@@ -60,7 +53,7 @@ jobs:
       -
         name: Build and push base image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }}
         uses: docker/build-push-action@v2
-        if: ${{steps.runs_on_main.outputs.is_main_branch}}
+        if: ${{ github.ref_name == 'main' }}
         with:
           context: .
           target: base
@@ -73,7 +66,7 @@ jobs:
       -
         name: Build and push gitlab image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }} / gitlab ${{env.USED_GITLAB_CLI_VERSION}}
         uses: docker/build-push-action@v2
-        if: ${{steps.runs_on_main.outputs.is_main_branch}}   
+        if: ${{ github.ref_name == 'main' }}   
         with:
           context: .
           target: gitlab
