--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,8 +11,6 @@ on:
 
 jobs:
   docker:
-    env:
-      USED_GITLAB_CLI_VERSION: 2.10.1
     strategy:
       matrix:
         include:
@@ -37,9 +35,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USER_NAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Get PDM Version to use
+      - name: Get PDM version to use
         id: pdm_version
         run: echo ::set-output name=version::$(cat pdm.version | tr -d [:space:] )
+      - name: Get python-gitlab version to use
+        id: gitlab_version
+        run: echo ::set-output name=version::$(cat gitlab.version | tr -d [:space:] )
       -
         name: Build all images with python ${{ matrix.python }} / alpine ${{ matrix.alpine }} without pushing
         uses: docker/build-push-action@v2
@@ -49,8 +50,8 @@ jobs:
           build-args: |
             PYTHON_VERSION=${{ matrix.python }}
             ALPINE_VERSION=${{ matrix.alpine }}
-            PDM_VERSION=${{steps.pdm_version.outputs.version}}
-            GITLAB_CLI_VERSION=${{env.USED_GITLAB_CLI_VERSION}}
+            PDM_VERSION=${{ steps.pdm_version.outputs.version }}
+            GITLAB_CLI_VERSION=${{steps.gitlab_version.outputs.version}}
       -
         name: Build and push base image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }}
         uses: docker/build-push-action@v2
@@ -65,16 +66,16 @@ jobs:
             ALPINE_VERSION=${{ matrix.alpine }}
             PDM_VERSION=${{ steps.pdm_version.outputs.version }}
       -
-        name: Build and push gitlab image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }} / gitlab ${{ env.USED_GITLAB_CLI_VERSION }}
+        name: Build and push gitlab image with python ${{ matrix.python }} / alpine ${{ matrix.alpine }} / gitlab ${{ steps.gitlab_version.outputs.version }}
         uses: docker/build-push-action@v2
         if: ${{ github.ref_name == 'main' }}   
         with:
           context: .
           target: gitlab
           push: true
-          tags: carstencodes/pdm-alpine:${{ steps.pdm_version.outputs.version }}-python${{ matrix.python }}-gitlab${{ env.USED_GITLAB_CLI_VERSION }}
+          tags: carstencodes/pdm-alpine:${{ steps.pdm_version.outputs.version }}-python${{ matrix.python }}-gitlab${{ steps.gitlab_version.outputs.version }}
           build-args: |
             PYTHON_VERSION=${{ matrix.python }}
             ALPINE_VERSION=${{ matrix.alpine }}
             PDM_VERSION=${{ steps.pdm_version.outputs.version }}
-            GITLAB_CLI_VERSION=${{ env.USED_GITLAB_CLI_VERSION }}
+            GITLAB_CLI_VERSION=${{ steps.gitlab_version.outputs.version }}
