--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -9,10 +9,12 @@ jobs:
     steps:
       - 
         name: Ensure PAT is set
-        if: ${{ secrets.AUTO_UPDATE_TOKEN == '' }}
         run: |
-          echo "Set repository secret AUTO_UPDATE_TOKEN to a non-empty value." >&2
-          exit 1
+          if [ '${{ secrets.AUTO_UPDATE_TOKEN }}' == '' ];
+          then
+            echo "Set repository secret AUTO_UPDATE_TOKEN to a non-empty value." >&2
+            exit 1
+          fi
       - 
         name: Checkout this repository
         uses: actions/checkout@v2
