Updated fetch-depth parameter

--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -20,6 +20,8 @@ jobs:
       - 
         name: Checkout this repository
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 2 # Get previous commits
       - 
         name: Fetch latest released version of all repositories
         run: |
