--- a/.github/workflows/auto-update.yml
+++ b/.github/workflows/auto-update.yml
@@ -1,7 +1,7 @@
 name: Automatic update released versions
 on:
   schedule:
-    - cron:  '0 10 * * 6' # Each Saturday at 10 am
+    - cron:  '0 18 * * *' # Each day at 6 pm
   workflow_dispatch: # Do nothing at all
 jobs:
   auto-update:
@@ -90,8 +90,8 @@ jobs:
           pull-request-number: ${{ steps.create-pr.outputs.pull-request-number }}
           merge-method: rebase
       - 
-        name: Gotify Notification on success
-        if: success()
+        name: Gotify Notification on success with update
+        if: ${{ success() && steps.changed_files.outputs.any_modified == 'true' }}
         env:
           GOTIFY_API_BASE: ${{ secrets.GOTIFY_API_BASE }}
           GOTIFY_APP_TOKEN: ${{ secrets.GOTIFY_APP_TOKEN }}
@@ -101,6 +101,17 @@ jobs:
                -F "message=${{ steps.modifications.outputs.message }}" \
                -F "priority=6"
       - 
+        name: Gotify Notification on success without any update
+        if: ${{ success() && steps.changed_files.outputs.any_modified == 'true' }}
+        env:
+          GOTIFY_API_BASE: ${{ secrets.GOTIFY_API_BASE }}
+          GOTIFY_APP_TOKEN: ${{ secrets.GOTIFY_APP_TOKEN }}
+        run: |
+          curl -f -S "https://${GOTIFY_API_BASE}/message?token=${GOTIFY_APP_TOKEN}" \
+               -F "title=No update of ${{ github.repository }}" \
+               -F "message=Mo update has taken place. The repository is up to date." \
+               -F "priority=6"
+      - 
         name: Gotify Notification on error
         if: failure()
         env:
@@ -108,6 +119,6 @@ jobs:
           GOTIFY_APP_TOKEN: ${{ secrets.GOTIFY_APP_TOKEN }}
         run: |
           curl -f -S "https://${GOTIFY_API_BASE}/message?token=${GOTIFY_APP_TOKEN}" \
-               -F "title=Update of ${{ github.repository }} succeeded" \
+               -F "title=Update of ${{ github.repository }} failed" \
                -F "message=${{ steps.modifications.outputs.message }}" \
                -F "priority=9"
