Added Python 3.10 based upon Alpine 3.16
Using Python 3.10 support. It is now part of alpine 3.16

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,8 @@ jobs:
             alpine: 3.13
           - python: 3.9
             alpine: 3.14
+          - python: 3.10
+            alpine: 3.16
     runs-on: ubuntu-latest
     name: Create docker containers
     steps:
