--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,12 +14,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - python: 3.8
-            alpine: 3.13
-          - python: 3.9
-            alpine: 3.14
-          - python: 3.10
-            alpine: 3.16
+          - python: "3.8"
+            alpine: "3.13"
+          - python: "3.9"
+            alpine: "3.14"
+          - python: "3.10"
+            alpine: "3.16"
     runs-on: ubuntu-latest
     name: Create docker containers
     steps:
